--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <!doctype html>
 <html lang="fr">
+  <script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"Person",
+  "name":"Laurent Garnier",
+  "jobTitle":"Consultant en industrialisation",
+  "url":"https://TON_USER.github.io/Hot-Prod.Webpage/",
+  "sameAs": [],
+  "address": {
+    "@type":"PostalAddress",
+    "addressLocality":"Paris",
+    "addressCountry":"FR"
+  }
+}
+</script>
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
