MAJ automatique site HotProd

--- a/index.html
+++ b/index.html
@@ -1,159 +1,3 @@
 <!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>HotProd – Laurent Garnier | Industrialisation & Innovation</title>
-  <meta name="description" content="HotProd accompagne les entreprises industrielles dans la conception, l'innovation et l'optimisation de leurs processus." />
-  <meta name="keywords" content="industrialisation, innovation technologique, automatisation, gestion de projet, Lean, optimisation industrielle" />
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <style>
-    .map-container{position:relative;padding-bottom:56.25%;height:0;overflow:hidden;}
-    .map-container iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:0;}
-  </style>
-</head>
-<body class="bg-slate-50 text-slate-900 antialiased">
-  <header class="bg-white border-b">
-    <div class="max-w-5xl mx-auto px-6 py-5 flex items-center justify-between">
-      <div>
-        <h1 class="text-xl font-bold">HotProd – Laurent Garnier</h1>
-        <p class="text-sm text-slate-500">Solutions industrielles intelligentes & innovation technologique</p>
-      </div>
-      <nav class="space-x-4 text-sm">
-        <a href="#services" class="hover:underline">Services</a>
-        <a href="#about" class="hover:underline">À propos</a>
-        <a href="#testimonials" class="hover:underline">Témoignages</a>
-        <a href="#contact" class="hover:underline">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="max-w-5xl mx-auto px-6 py-12">
-    <!-- Accueil -->
-    <section id="home" class="mb-12 grid md:grid-cols-2 gap-8 items-center">
-      <div>
-        <h2 class="text-3xl md:text-4xl font-bold mb-4">Accélérez votre transformation industrielle avec HotProd</h2>
-        <p class="text-lg text-slate-600 mb-4">
-          Expertise en industrialisation, automatisation et innovation technologique pour renforcer la performance de vos opérations.
-        </p>
-        <ul class="list-disc pl-5 mb-4 text-slate-600 space-y-1">
-          <li>Conception et intégration de systèmes industriels intelligents</li>
-          <li>Optimisation de la production et réduction des coûts</li>
-          <li>Conseil stratégique et accompagnement sur mesure</li>
-        </ul>
-        <a href="#services" class="inline-block bg-sky-600 text-white px-5 py-2 rounded-lg">Découvrir nos services</a>
-      </div>
-      <div class="bg-white p-6 rounded-lg shadow">
-        <h3 class="font-semibold mb-2">Contact direct</h3>
-        <p class="text-sm text-slate-600 mb-4">Paris · +33 6 64 24 77 40 · l.garnier@hotmail.com</p>
-        <a class="text-sm text-sky-700 hover:underline" href="#contact">Envoyer un message →</a>
-      </div>
-    </section>
-
-    <!-- Services -->
-    <section id="services" class="mb-12">
-      <h3 class="text-2xl font-semibold mb-6 text-sky-700">Nos services</h3>
-      <div class="grid md:grid-cols-2 gap-6">
-        <article class="bg-white p-6 rounded-lg shadow">
-          <h4 class="font-semibold mb-2">Industrialisation des produits</h4>
-          <p class="text-slate-600 mb-2">
-            Optimisez vos lignes de production, réduisez les délais de mise sur le marché et garantissez la qualité.
-          </p>
-          <ul class="list-disc pl-5 text-sm text-slate-600 space-y-1">
-            <li>DFM, contrôle process et qualité</li>
-            <li>Optimisation des coûts de fabrication</li>
-            <li>Accompagnement du prototype à la série</li>
-          </ul>
-        </article>
-        <article class="bg-white p-6 rounded-lg shadow">
-          <h4 class="font-semibold mb-2">Innovation technologique</h4>
-          <p class="text-slate-600 mb-2">Intégrez des technologies de pointe pour améliorer vos performances industrielles.</p>
-          <ul class="list-disc pl-5 text-sm text-slate-600 space-y-1">
-            <li>R&D et prototypage</li>
-            <li>Digitalisation et automatisation</li>
-            <li>Déploiement de solutions IoT et robotique</li>
-          </ul>
-        </article>
-        <article class="bg-white p-6 rounded-lg shadow">
-          <h4 class="font-semibold mb-2">Gestion de projets</h4>
-          <p class="text-slate-600 mb-2">Pilotez vos projets complexes dans le respect des coûts, délais et performances.</p>
-          <ul class="list-disc pl-5 text-sm text-slate-600 space-y-1">
-            <li>Méthodes Agile et Lean</li>
-            <li>Coordination d’équipes pluridisciplinaires</li>
-            <li>Suivi des performances QCD</li>
-          </ul>
-        </article>
-        <article class="bg-white p-6 rounded-lg shadow">
-          <h4 class="font-semibold mb-2">Formation et accompagnement</h4>
-          <p class="text-slate-600 mb-2">Développez les compétences de vos équipes grâce à des formations pratiques.</p>
-          <ul class="list-disc pl-5 text-sm text-slate-600 space-y-1">
-            <li>Workshops techniques et Lean</li>
-            <li>Coaching d’équipes industrielles</li>
-            <li>Programmes d’amélioration continue</li>
-          </ul>
-        </article>
-      </div>
-    </section>
-
-    <!-- À propos -->
-    <section id="about" class="mb-12">
-      <h3 class="text-2xl font-semibold mb-4 text-sky-700">À propos</h3>
-      <div class="bg-white p-6 rounded-lg shadow">
-        <p class="text-slate-600 mb-2">
-          Plus de 15 ans d’expérience en direction industrielle et gestion de projets technologiques, en France et en Chine.
-        </p>
-        <p class="text-slate-600 mb-2">
-          Expert en industrialisation, innovation et automatisation, j’accompagne les entreprises high-tech vers l’excellence opérationnelle.
-        </p>
-        <p class="text-slate-600">
-          <strong>Valeurs clés :</strong> Innovation de pointe · Excellence opérationnelle · Collaboration fructueuse
-        </p>
-        <p class="text-sm text-slate-500 mt-3">
-          Vision : Offrir des solutions innovantes qui marient technologie et excellence industrielle pour une performance optimale.
-        </p>
-      </div>
-    </section>
-
-    <!-- Témoignages -->
-    <section id="testimonials" class="mb-12">
-      <h3 class="text-2xl font-semibold mb-4 text-sky-700">Témoignages</h3>
-      <div class="space-y-4">
-        <div class="bg-white p-5 rounded-lg shadow">
-          <p class="italic text-slate-600">
-            “Laurent a su comprendre nos besoins et nous fournir des solutions innovantes. Résultat : une production plus efficace et des coûts réduits.”
-          </p>
-          <div class="mt-2 text-sm text-slate-500">— Client industriel, Directeur Production</div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="mb-12">
-      <h3 class="text-2xl font-semibold mb-4 text-sky-700">Contact</h3>
-      <div class="grid md:grid-cols-2 gap-6">
-        <form class="bg-white p-6 rounded-lg shadow" action="mailto:l.garnier@hotmail.com" method="post" enctype="text/plain">
-          <label class="block text-sm mb-1">Nom <input name="name" required class="w-full border rounded px-3 py-2 mt-1"/></label>
-          <label class="block text-sm mb-1">Société <input name="company" class="w-full border rounded px-3 py-2 mt-1"/></label>
-          <label class="block text-sm mb-1">Email <input type="email" name="email" required class="w-full border rounded px-3 py-2 mt-1"/></label>
-          <label class="block text-sm mb-1">Téléphone <input name="phone" class="w-full border rounded px-3 py-2 mt-1"/></label>
-          <label class="block text-sm mb-1">Message <textarea name="message" rows="4" class="w-full border rounded px-3 py-2 mt-1"></textarea></label>
-          <div class="mt-4"><button type="submit" class="bg-sky-600 text-white px-4 py-2 rounded">Envoyer</button></div>
-        </form>
-        <div>
-          <div class="bg-white p-6 rounded-lg shadow mb-4">
-            <h4 class="font-semibold">Coordonnées</h4>
-            <p class="text-sm text-slate-600">Paris, France<br/>+33 6 64 24 77 40<br/>l.garnier@hotmail.com</p>
-          </div>
-          <div class="bg-white p-4 rounded-lg shadow map-container">
-            <iframe src="https://www.google.com/maps?q=Paris%2C+France&output=embed" loading="lazy"></iframe>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer class="text-center text-sm text-slate-500 py-8">
-      © HotProd – Laurent Garnier | Innovation · Industrialisation · Excellence
-    </footer>
-  </main>
-</body>
-</html>
+<html lang="fr"><head><meta charset="utf-8"/><titre>HotProd - Accélérez votre industrialisation</title></head>
+<body><h1>HotProd - Accélérez votre industrialisation</h1><p>Le partenaire stratégique des entreprises industrielles pour transformer leurs idées en production efficace.</p></body></html>
