Ajout des agents HotProd

--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!doctype html>
-<html lang="fr"><head><meta charset="utf-8"/><titre>HotProd - Accélérez votre industrialisation</title></head>
+<html lang="fr"><head><meta charset="utf-8"/><titre>HotProd - Accélérez votre industrialisation</titre></head>
 <body><h1>HotProd - Accélérez votre industrialisation</h1><p>Le partenaire stratégique des entreprises industrielles pour transformer leurs idées en production efficace.</p></body></html>
