--- a/index.html
+++ b/index.html
@@ -1,3 +1,153 @@
 <!doctype html>
-<html lang="fr"><head><meta charset="utf-8"/><titre>HotProd - Accélérez votre industrialisation</titre></head>
-<body><h1>HotProd - Accélérez votre industrialisation</h1><p>Le partenaire stratégique des entreprises industrielles pour transformer leurs idées en production efficace.</p></body></html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Laurent Garnier — Industrialisation & Innovation</title>
+  <meta name="description" content="Laurent Garnier - industrialisation et innovation. Transformez vos projets IoT, robotique et high-tech de prototype à production." />
+  <meta name="keywords" content="Industrialisation expert, IoT, robotique, process optimisation, project management" />
+  <!-- Tailwind Play CDN (développement rapide) -->
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <style>
+    /* petites adaptations pour la map responsive */
+    .map-container { position:relative; padding-bottom:56.25%; height:0; overflow:hidden; }
+    .map-container iframe { position:absolute; top:0; left:0; width:100%; height:100%; border:0; }
+  </style>
+</head>
+<body class="bg-slate-50 text-slate-800 antialiased">
+  <header class="bg-white border-b">
+    <div class="max-w-4xl mx-auto px-6 py-6 flex items-center justify-between">
+      <div>
+        <h1 class="text-xl font-semibold">Laurent Garnier</h1>
+        <div class="text-sm text-slate-500">Consultant en industrialisation & innovation</div>
+      </div>
+      <nav class="space-x-4 text-sm">
+        <a href="#services" class="hover:underline">Services</a>
+        <a href="#about" class="hover:underline">About</a>
+        <a href="#testimonials" class="hover:underline">Témoignages</a>
+        <a href="#contact" class="hover:underline">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="max-w-4xl mx-auto px-6 py-12">
+    <!-- Home / Hero -->
+    <section id="home" class="mb-12">
+      <div class="grid md:grid-cols-2 gap-8 items-center">
+        <div>
+          <h2 class="text-3xl md:text-4xl font-bold mb-4">Accelerate Your Digital and Industrial Transformation with Laurent Garnier</h2>
+          <p class="text-lg text-slate-600 mb-4">Industrialization and innovation expertise for high-tech businesses. Expertise en développement produit, production série et optimisation des processus.</p>
+          <ul class="mb-4 space-y-2 text-slate-600">
+            <li>Passage prototype → production</li>
+            <li>IoT, robotique, produits high-tech</li>
+            <li>Solutions sur-mesure pour amélioration de process</li>
+          </ul>
+          <a href="#services" class="inline-block bg-sky-600 text-white px-5 py-2 rounded-lg">Explore My Services</a>
+        </div>
+        <div class="bg-white rounded-lg shadow p-6">
+          <h3 class="font-semibold mb-2">Contact rapide</h3>
+          <p class="text-sm text-slate-600 mb-4">Paris, France · +33 6 64 24 77 40 · l.garnier@hotmail.com</p>
+          <a class="text-sm text-slate-700 hover:underline" href="#contact">Envoyer un message →</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <section id="services" class="mb-12">
+      <h3 class="text-2xl font-semibold mb-4">Services</h3>
+      <div class="grid md:grid-cols-2 gap-6">
+        <article class="bg-white p-6 rounded-lg shadow">
+          <h4 class="font-semibold mb-2">Product Industrialization</h4>
+          <p class="text-slate-600 mb-2">Prototype → production de masse. DFM, optimisation fournisseurs, assurance qualité.</p>
+          <ul class="text-sm text-slate-600 list-disc pl-5">
+            <li>Ramp-up & lignes de production</li>
+            <li>Process control & KPI</li>
+            <li>Réduction des coûts non-qualité</li>
+          </ul>
+        </article>
+        <article class="bg-white p-6 rounded-lg shadow">
+          <h4 class="font-semibold mb-2">Technological Innovation</h4>
+          <p class="text-slate-600 mb-2">Recommandations stratégiques et mise en œuvre de solutions IoT & robotique.</p>
+          <ul class="text-sm text-slate-600 list-disc pl-5">
+            <li>Études technologiques</li>
+            <li>Prototypage & POC</li>
+            <li>Industrialisation des solutions</li>
+          </ul>
+        </article>
+        <article class="bg-white p-6 rounded-lg shadow">
+          <h4 class="font-semibold mb-2">Project Management</h4>
+          <p class="text-slate-600 mb-2">Agile & Lean, gestion des risques et coordination internationale.</p>
+          <ul class="text-sm text-slate-600 list-disc pl-5">
+            <li>Planification QCD</li>
+            <li>Gestion fournisseurs & EMS</li>
+            <li>Leadership cross-fonctionnel</li>
+          </ul>
+        </article>
+        <article class="bg-white p-6 rounded-lg shadow">
+          <h4 class="font-semibold mb-2">Training & Development</h4>
+          <p class="text-slate-600 mb-2">Workshops, coaching d’équipes techniques, programmes d’amélioration continue.</p>
+          <ul class="text-sm text-slate-600 list-disc pl-5">
+            <li>Ateliers pratiques</li>
+            <li>Formation Lean & industrialisation</li>
+            <li>Roadmaps de compétences</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="mb-12">
+      <h3 class="text-2xl font-semibold mb-4">About</h3>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <p class="text-slate-600 mb-3">Ingénieur expérimenté en industrialisation et technologies high-tech, avec plus de 15 ans d'expérience en France et en Chine. Leadership chez Lunii, KickMaker, SoftBank Robotics et pilotage de ramp-ups industriels et projets IoT/robotique.</p>
+        <p class="text-slate-600">Valeurs : <strong>Innovation · Excellence · Collaboration</strong></p>
+        <p class="text-sm text-slate-500 mt-3">Langues : Français (natif), Anglais (bilingue), Espagnol/Chinois/Allemand (niveau variable). Voir CV pour expériences détaillées. </p>
+        <a class="text-sm text-sky-600 hover:underline mt-3 inline-block" href="/CV_Laurent_Garnier_FR.pdf">Télécharger le CV (FR)</a>
+      </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section id="testimonials" class="mb-12">
+      <h3 class="text-2xl font-semibold mb-4">Témoignages</h3>
+      <div class="space-y-4">
+        <!-- Placeholder testimonial -->
+        <div class="bg-white p-5 rounded-lg shadow">
+          <p class="text-slate-600 italic">"Laurent a conduit notre ramp-up industriel et réduit les coûts non-qualité de façon significative."</p>
+          <div class="mt-3 text-sm text-slate-500">— Client, Responsable Production</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="mb-12">
+      <h3 class="text-2xl font-semibold mb-4">Contact</h3>
+      <div class="grid md:grid-cols-2 gap-6">
+        <form class="bg-white p-6 rounded-lg shadow" action="mailto:l.garnier@hotmail.com" method="post" enctype="text/plain">
+          <label class="block text-sm mb-1">Nom <input name="name" required class="w-full border rounded px-3 py-2 mt-1" /></label>
+          <label class="block text-sm mb-1">Société <input name="company" class="w-full border rounded px-3 py-2 mt-1" /></label>
+          <label class="block text-sm mb-1">Email <input type="email" name="email" required class="w-full border rounded px-3 py-2 mt-1" /></label>
+          <label class="block text-sm mb-1">Téléphone <input name="phone" class="w-full border rounded px-3 py-2 mt-1" /></label>
+          <label class="block text-sm mb-1">Message <textarea name="message" rows="4" class="w-full border rounded px-3 py-2 mt-1"></textarea></label>
+          <div class="mt-4"><button type="submit" class="bg-sky-600 text-white px-4 py-2 rounded">Envoyer</button></div>
+        </form>
+
+        <div>
+          <div class="bg-white p-6 rounded-lg shadow mb-4">
+            <h4 class="font-semibold">Coordonnées</h4>
+            <p class="text-sm text-slate-600">Paris, France<br/>+33 6 64 24 77 40<br/>l.garnier@hotmail.com</p>
+          </div>
+
+          <div class="bg-white p-4 rounded-lg shadow map-container">
+            <!-- Google Maps: use Embed API or simple public iframe. Replace PLACE_ID or use generic Paris marker -->
+            <iframe src="https://www.google.com/maps?q=Paris%2C+France&output=embed" loading="lazy"></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="text-center text-sm text-slate-500 py-8">
+      © Laurent Garnier — Industrialisation & Innovation
+    </footer>
+  </main>
+</body>
+</html>
