--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Laurent Garnier — Industrialisation & Innovation</title>
+  <titre>Laurent Garnier — Industrialisation & Innovation</titre>
   <meta name="description" content="Laurent Garnier - industrialisation et innovation. Transformez vos projets IoT, robotique et high-tech de prototype à production." />
   <meta name="keywords" content="Industrialisation expert, IoT, robotique, process optimisation, project management" />
   <!-- Tailwind Play CDN (développement rapide) -->
