--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p class="text-slate-600 mb-3">Ingénieur expérimenté en industrialisation et technologies high-tech, avec plus de 15 ans d'expérience en France et en Chine. Leadership chez Lunii, KickMaker, SoftBank Robotics et pilotage de ramp-ups industriels et projets IoT/robotique.</p>
         <p class="text-slate-600">Valeurs : <strong>Innovation · Excellence · Collaboration</strong></p>
         <p class="text-sm text-slate-500 mt-3">Langues : Français (natif), Anglais (bilingue), Espagnol/Chinois/Allemand (niveau variable). Voir CV pour expériences détaillées. </p>
-        <a class="text-sm text-sky-600 hover:underline mt-3 inline-block" href="/CV_Laurent_Garnier_FR.pdf">Télécharger le CV (FR)</a>
+        <a class="text-sm text-sky-600 hover:underline mt-3 inline-block" href="/CV.pdf">Télécharger le CV (FR)</a>
       </div>
     </section>
 
