--- a/fr/index.html
+++ b/fr/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HotProd – Conseil en industrialisation</title>
-<link rel="stylesheet" href="../assets/style.css">
+  <meta charset="UTF-8">
+  <title>HotProd – Accélérez votre transformation industrielle</title>
+  <link rel="stylesheet" href="../assets/style.css">
+  <meta name="description" content="Conseil en industrialisation, innovation technologique et direction industrielle – Laurent Garnier.">
 </head>
 <body>
 <header>
-  <h1>HotProd – Conseil en industrialisation</h1>
-  <nav><a href="index.html">Accueil</a> | <a href="services.html">Services</a> | <a href="about.html">À propos</a> | <a href="testimonials.html">Témoignages</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../en/index.html">🇬🇧 English version</a></div>
+  <h1>HotProd</h1>
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="services.html">Services</a>
+    <a href="about.html">À propos</a>
+    <a href="testimonials.html">Témoignages</a>
+    <a href="contact.html">Contact</a>
+    <a href="../en/index.html">EN</a>
+  </nav>
 </header>
+
 <main>
-<h2>Accélérez votre transformation industrielle</h2><p>HotProd accompagne les entreprises high-tech dans l'industrialisation, la digitalisation et l'optimisation de leurs processus de production. Nous allions expertise technique, innovation et performance opérationnelle.</p><p><a href='services.html'>Découvrir nos services →</a></p>
+  <h2>Accélérez votre transformation industrielle</h2>
+  <p>HotProd accompagne les entreprises industrielles et technologiques dans leur industrialisation, leur innovation et la gestion de projets à grande échelle.</p>
+  <p><a href="services.html" class="btn">Découvrir nos services</a></p>
 </main>
+
 <footer>
-  <p>© 2025 HotProd — Laurent Garnier</p>
+  <p>© 2025 HotProd – Conseil en industrialisation & innovation</p>
 </footer>
 </body>
 </html>
