--- a/fr/services.html
+++ b/fr/services.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HotProd – Conseil en industrialisation</title>
-<link rel="stylesheet" href="../assets/style.css">
+  <meta charset="UTF-8">
+  <title>Services – HotProd</title>
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
 <header>
-  <h1>HotProd – Conseil en industrialisation</h1>
-  <nav><a href="index.html">Accueil</a> | <a href="services.html">Services</a> | <a href="about.html">À propos</a> | <a href="testimonials.html">Témoignages</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../en/index.html">🇬🇧 English version</a></div>
+  <h1>Nos Services</h1>
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="services.html">Services</a>
+    <a href="about.html">À propos</a>
+    <a href="testimonials.html">Témoignages</a>
+    <a href="contact.html">Contact</a>
+    <a href="../en/services.html">EN</a>
+  </nav>
 </header>
+
 <main>
-<h2>Nos Services</h2><h3>Industrialisation de produits</h3><p>Passage du prototype à la production de masse. Optimisation DFM, qualité et process fournisseurs.</p><h3>Innovation technologique</h3><p>Intégration de solutions IoT, robotique et IA pour booster la compétitivité.</p><h3>Gestion de projets</h3><p>Application des méthodes Agile et Lean pour piloter vos projets complexes.</p><h3>Formation et accompagnement</h3><p>Formations sur les processus industriels et l’innovation. Coaching technique pour vos équipes.</p>
+  <section>
+    <h2>Industrialisation de produits</h2>
+    <p>De la conception au passage en production de masse : DFM, qualité, supply chain et gestion fournisseurs.</p>
+  </section>
+
+  <section>
+    <h2>Innovation technologique</h2>
+    <p>Développement de solutions IoT, robotiques et mécatroniques. Accompagnement à la transformation digitale.</p>
+  </section>
+
+  <section>
+    <h2>Direction industrielle & management de transition</h2>
+    <p>Direction technique temporaire, structuration des processus, lean management et montée en compétence des équipes.</p>
+  </section>
 </main>
+
 <footer>
-  <p>© 2025 HotProd — Laurent Garnier</p>
+  <p>© 2025 HotProd – Excellence industrielle et technologique</p>
 </footer>
 </body>
 </html>
