--- a/fr/contact.html
+++ b/fr/contact.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HotProd – Conseil en industrialisation</title>
-<link rel="stylesheet" href="../assets/style.css">
+  <meta charset="UTF-8">
+  <title>Contact – HotProd</title>
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
 <header>
-  <h1>HotProd – Conseil en industrialisation</h1>
-  <nav><a href="index.html">Accueil</a> | <a href="services.html">Services</a> | <a href="about.html">À propos</a> | <a href="testimonials.html">Témoignages</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../en/index.html">🇬🇧 English version</a></div>
+  <h1>Contactez-nous</h1>
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="services.html">Services</a>
+    <a href="about.html">À propos</a>
+    <a href="testimonials.html">Témoignages</a>
+    <a href="../en/contact.html">EN</a>
+  </nav>
 </header>
+
 <main>
-<h2>Contact</h2><p>Pour toute collaboration ou demande de mission :</p><form><label>Nom :</label><input type='text'><br><label>Société :</label><input type='text'><br><label>Email :</label><input type='email'><br><label>Téléphone :</label><input type='tel'><br><label>Message :</label><textarea></textarea><br><button>Envoyer</button></form><p>📍 Paris, France<br>📧 l.garnier@hotmail.com<br>📞 +33 664 247 740</p>
+  <h2>Restons en contact</h2>
+  <p>Vous avez un projet d’industrialisation ou de transformation à lancer ? Contactez-moi directement ou prenez rendez-vous en ligne.</p>
+
+  <form action="https://formspree.io/f/xpzeglqn" method="POST">
+    <label>Nom :</label><input type="text" name="name" required>
+    <label>Email :</label><input type="email" name="email" required>
+    <label>Entreprise :</label><input type="text" name="company">
+    <label>Message :</label><textarea name="message" rows="5"></textarea>
+    <button type="submit">Envoyer</button>
+  </form>
+
+  <p><a class="btn" href="https://calendly.com/laurent-garnier-hotprod/30min" target="_blank">📅 Prendre rendez-vous</a></p>
+
+  <p>📍 Paris, France<br>📧 l.garnier@hotmail.com<br>📞 +33 6 64 24 77 40</p>
 </main>
+
 <footer>
-  <p>© 2025 HotProd — Laurent Garnier</p>
+  <p>© 2025 HotProd – Laurent Garnier</p>
 </footer>
 </body>
 </html>
