Replace English language selection with French

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!doctype html><html lang='en'><head><meta charset='utf-8'/><meta name='viewport' content='width=device-width,initial-scale=1'/><title>HotProd — choose language</title></head><body style='font-family:Arial,Helvetica,sans-serif;display:flex;align-items:center;justify-content:center;height:100vh;'><div style='text-align:center;'><h1>HotProd</h1><p><a href='/Webpage/fr/'>Français</a> — <a href='/Webpage/en/'>English</a></p></div></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>HotProd – Choose your language</title>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
+<main style="text-align:center;margin-top:100px;">
+  <h1>HotProd</h1>
+  <h2>Choisissez votre langue / Choose your language</h2>
+  <p>
+    <a href="fr/index.html" class="btn">🇫🇷 Français</a>
+    <a href="en/index.html" class="btn">🇬🇧 English</a>
+  </p>
+</main>
+</body>
+</html>
