--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>HotProd – Choose your language</title>
+  <meta charset="utf-8">
+  <title>HotProd — Conseil en industrialisation</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="assets/style.css">
+  <meta name="description" content="HotProd accompagne les entreprises high-tech pour industrialiser leurs produits, optimiser la production et accélérer l'innovation.">
 </head>
 <body>
-<main style="text-align:center;margin-top:100px;">
-  <h1>HotProd</h1>
-  <h2>Choisissez votre langue / Choose your language</h2>
-  <p>
-    <a href="fr/index.html" class="btn">🇫🇷 Français</a>
-    <a href="en/index.html" class="btn">🇬🇧 English</a>
-  </p>
-</main>
+  <main style="text-align:center;padding:100px 16px">
+    <h1>HotProd</h1>
+    <p style="font-size:1.05rem;color:#333;max-width:700px;margin:12px auto">Conseil en industrialisation et innovation technologique — choisissez votre langue</p>
+    <p style="margin-top:18px">
+      <a class="btn" href="fr/index.html">🇫🇷 Français</a>
+      <a class="btn" style="margin-left:12px" href="en/index.html">🇬🇧 English</a>
+    </p>
+  </main>
 </body>
 </html>
