--- a/en/index.html
+++ b/en/index.html
@@ -1,22 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HotProd – Industrial Consulting</title>
-<link rel="stylesheet" href="../assets/style.css">
+  <meta charset="utf-8">
+  <title>HotProd — Accelerate your industrial transformation</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="HotProd helps high-tech companies industrialize products, reduce time-to-market and improve operational performance.">
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
 <header>
-  <h1>HotProd – Industrial Consulting</h1>
-  <nav><a href="index.html">Home</a> | <a href="services.html">Services</a> | <a href="about.html">About</a> | <a href="testimonials.html">Testimonials</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../fr/index.html">🇫🇷 Version française</a></div>
+  <div class="header-inner">
+    <div class="brand"><h1>HotProd</h1></div>
+    <nav class="desktop">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">About</a>
+      <a href="testimonials.html">Testimonials</a>
+      <a href="contact.html" class="cta-top">Contact / Book</a>
+      <a href="../fr/index.html">FR</a>
+    </nav>
+  </div>
 </header>
-<main>
-<h2>Accelerate your industrial transformation</h2><p>HotProd helps high-tech companies industrialize, digitize, and optimize their production processes. We combine technical expertise, innovation, and operational excellence.</p><p><a href='services.html'>Explore our services →</a></p>
-</main>
-<footer>
-  <p>© 2025 HotProd — Laurent Garnier</p>
+
+<section class="container hero">
+  <div>
+    <h2 style="font-size:1.9rem;margin:0">Accelerate your industrial transformation</h2>
+    <p style="margin-top:12px;color:var(--muted);max-width:680px">HotProd supports high-tech businesses to transform prototypes into reliable, scalable production — without operational chaos.</p>
+
+    <div style="margin-top:18px;">
+      <a class="btn" href="contact.html">Schedule a demo</a>
+      <a class="btn" style="background:#1f2937;margin-left:10px" href="services.html">See services</a>
+    </div>
+  </div>
+
+  <div class="hero-visual card">
+    <img src="../assets/hero-visual.png" alt="Visual" style="width:100%;display:block;object-fit:cover;height:100%">
+  </div>
+</section>
+
+<section class="container card" style="margin-top:18px">
+  <h3 class="section-title">Core services</h3>
+  <div class="features">
+    <div class="feature"><h4>Product Industrialization</h4><p>From prototype to mass production: DFM, quality and supplier process improvements.</p></div>
+    <div class="feature"><h4>Technology & IoT</h4><p>Architecture, prototyping, and integration to capture product data and optimize performance.</p></div>
+    <div class="feature"><h4>Project Leadership</h4><p>Interim industrial leadership, lean operations and cross-functional program delivery.</p></div>
+  </div>
+</section>
+
+<section class="container card" style="margin-top:18px">
+  <h3 class="section-title">Testimonials</h3>
+  <blockquote>“Laurent structured our production and cut our time-to-market.”</blockquote>
+  <p style="font-size:0.9rem;color:var(--muted)">— Industrial Director, IoT company</p>
+</section>
+
+<footer class="footer">
+  <p>© 2025 HotProd — Laurent Garnier · Paris</p>
 </footer>
 </body>
 </html>
