--- a/fr/index.html
+++ b/fr/index.html
@@ -1,32 +1,86 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>HotProd – Accélérez votre transformation industrielle</title>
+  <meta charset="utf-8">
+  <title>HotProd — Accélérez votre transformation industrielle</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="HotProd aide les entreprises high-tech à industrialiser leurs produits, réduire les délais et améliorer la performance opérationnelle.">
   <link rel="stylesheet" href="../assets/style.css">
-  <meta name="description" content="Conseil en industrialisation, innovation technologique et direction industrielle – Laurent Garnier.">
 </head>
 <body>
 <header>
-  <h1>HotProd</h1>
-  <nav>
-    <a href="index.html">Accueil</a>
-    <a href="services.html">Services</a>
-    <a href="about.html">À propos</a>
-    <a href="testimonials.html">Témoignages</a>
-    <a href="contact.html">Contact</a>
-    <a href="../en/index.html">EN</a>
-  </nav>
+  <div class="header-inner">
+    <div class="brand">
+      <div class="logo"><img src="../assets/logo.png" alt="HotProd" style="height:36px"/></div>
+      <h1>HotProd</h1>
+    </div>
+    <nav class="desktop">
+      <a href="index.html">Accueil</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">À propos</a>
+      <a href="testimonials.html">Témoignages</a>
+      <a href="contact.html" class="cta-top">Contact / RDV</a>
+      <a href="../en/index.html">EN</a>
+    </nav>
+  </div>
 </header>
 
-<main>
-  <h2>Accélérez votre transformation industrielle</h2>
-  <p>HotProd accompagne les entreprises industrielles et technologiques dans leur industrialisation, leur innovation et la gestion de projets à grande échelle.</p>
-  <p><a href="services.html" class="btn">Découvrir nos services</a></p>
-</main>
+<section class="container hero">
+  <div>
+    <h2 style="font-size:1.9rem;margin:0">Accélérez votre transformation industrielle</h2>
+    <p style="margin-top:12px;color:var(--muted);max-width:680px">HotProd accompagne les entreprises high-tech pour transformer leurs prototypes en productions fiables et rentables — sans chaos opérationnel ni dépassements.</p>
 
-<footer>
-  <p>© 2025 HotProd – Conseil en industrialisation & innovation</p>
+    <div style="margin-top:18px;">
+      <a class="btn" href="contact.html">Planifier une démo</a>
+      <a class="btn" style="background:#1f2937;margin-left:10px" href="services.html">Voir nos services</a>
+    </div>
+
+    <div class="logo-bar" style="margin-top:20px">
+      <span class="badge">15+ ans</span>
+      <div style="font-size:0.95rem;color:var(--muted)">Clients : start-ups IoT, industriels électroniques, robotique</div>
+    </div>
+
+    <div class="kpis" style="margin-top:18px">
+      <div class="kpi"><strong>40%</strong><div style="font-size:0.85rem;color:var(--muted)">Réduction time-to-market</div></div>
+      <div class="kpi"><strong>30%</strong><div style="font-size:0.85rem;color:var(--muted)">Réduction coûts</div></div>
+      <div class="kpi"><strong>>95%</strong><div style="font-size:0.85rem;color:var(--muted)">Satisfaction client</div></div>
+    </div>
+  </div>
+
+  <div class="hero-visual card">
+    <!-- mockup image or embed short demo video -->
+    <img src="../assets/hero-visual.png" alt="Visual" style="width:100%;display:block;object-fit:cover;height:100%">
+  </div>
+</section>
+
+<section class="container card" style="margin-top:18px">
+  <h3 class="section-title">Nos services clés</h3>
+  <div class="features">
+    <div class="feature"><h4>Industrialisation produit</h4><p>DFM, qualification, optimisation process et pilotage fournisseur pour la montée en série.</p></div>
+    <div class="feature"><h4>Innovation & IoT</h4><p>Architecture produit, intégration capteurs & dataflow, prototypage rapide.</p></div>
+    <div class="feature"><h4>Gestion projet & Lean</h4><p>Agilité industrielle, gouvernance produit et réduction des risques.</p></div>
+  </div>
+</section>
+
+<section class="container" style="margin-top:18px">
+  <div class="card">
+    <h3 class="section-title">Étude rapide — Prenons 15 min</h3>
+    <p class="small-muted">Réservez un créneau pour discuter de votre projet. Aucune obligation commerciale.</p>
+    <p style="margin-top:12px">
+      <a class="btn" href="contact.html">Planifier une démo</a>
+      <a class="btn" style="background:#1f2937;margin-left:10px" href="https://calendly.com/l-garnier/30min" target="_blank">📅 Prendre rendez-vous</a>
+    </p>
+  </div>
+</section>
+
+<section class="container card" style="margin-top:18px">
+  <h3 class="section-title">Témoignages</h3>
+  <blockquote>« Laurent a structuré notre production et réduit notre time-to-market. »</blockquote>
+  <p style="font-size:0.9rem;color:var(--muted)">— Directeur industriel, société IoT</p>
+</section>
+
+<footer class="footer">
+  <p>© 2025 HotProd — Laurent Garnier · Paris · <a href="contact.html" style="color:#fff">Contact</a></p>
 </footer>
 </body>
 </html>
