Add full FR/EN pages for HotProd

--- a/en/testimonials.html
+++ b/en/testimonials.html
@@ -1,21 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HotProd – Industrial Consulting</title>
-<link rel="stylesheet" href="../assets/style.css">
+  <meta charset="utf-8">
+  <title>Testimonials – HotProd</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="What our clients say about HotProd: results-driven industrialization and innovation support.">
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
 <header>
-  <h1>HotProd – Industrial Consulting</h1>
-  <nav><a href="index.html">Home</a> | <a href="services.html">Services</a> | <a href="about.html">About</a> | <a href="testimonials.html">Testimonials</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../fr/index.html">🇫🇷 Version française</a></div>
+  <div class="header-inner">
+    <div class="brand"><h1>HotProd</h1></div>
+    <nav class="desktop">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">About</a>
+      <a href="testimonials.html" style="text-decoration:underline;">Testimonials</a>
+      <a href="contact.html" class="cta-top">Contact</a>
+      <a href="../fr/testimonials.html">FR</a>
+    </nav>
+  </div>
 </header>
-<main>
-<h2>Testimonials</h2><blockquote>“Laurent transformed our production structure and optimized our workflows effectively.”</blockquote><p>— Industrial Director, IoT startup</p><blockquote>“His ability to merge technical innovation with manufacturing precision is remarkable.”</blockquote><p>— Innovation Manager, robotics SME</p>
+
+<main class="container">
+  <div class="card">
+    <h2>What clients say</h2>
+
+    <blockquote>“Laurent structured our IoT production and reduced our time-to-market by 30%.”</blockquote>
+    <p class="small-muted">— Industrial Director, robotics company</p>
+
+    <blockquote>“Clear, pragmatic and efficient guidance. Our quality processes improved significantly.”</blockquote>
+    <p class="small-muted">— COO, electronics startup</p>
+
+    <blockquote>“Excellent ability to coordinate international teams and foster continuous improvement culture.”</blockquote>
+    <p class="small-muted">— Production Manager, IoT company</p>
+  </div>
 </main>
-<footer>
+
+<footer class="footer">
   <p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
