--- a/fr/about.html
+++ b/fr/about.html
@@ -1,21 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HotProd – Conseil en industrialisation</title>
-<link rel="stylesheet" href="../assets/style.css">
+  <meta charset="utf-8">
+  <title>À propos – HotProd</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="HotProd – dirigé par Laurent Garnier, expert en industrialisation et innovation avec plus de 15 ans d’expérience en Europe et en Asie.">
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
 <header>
-  <h1>HotProd – Conseil en industrialisation</h1>
-  <nav><a href="index.html">Accueil</a> | <a href="services.html">Services</a> | <a href="about.html">À propos</a> | <a href="testimonials.html">Témoignages</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../en/index.html">🇬🇧 English version</a></div>
+  <div class="header-inner">
+    <div class="brand"><h1>HotProd</h1></div>
+    <nav class="desktop">
+      <a href="index.html">Accueil</a>
+      <a href="services.html">Services</a>
+      <a href="about.html" style="text-decoration:underline;">À propos</a>
+      <a href="testimonials.html">Témoignages</a>
+      <a href="contact.html" class="cta-top">Contact</a>
+      <a href="../en/about.html">EN</a>
+    </nav>
+  </div>
 </header>
-<main>
-<h2>À propos de Laurent Garnier</h2><p>Plus de 15 ans d’expérience en industrialisation et innovation technologique, en France, en Europe et en Asie.</p><p>Direction industrielle et lancement de produits innovants chez Lunii, Kickmaker et SoftBank Robotics.</p><p><strong>Valeurs :</strong> Innovation – Excellence – Collaboration</p><p><strong>Vision :</strong> Offrir des solutions qui marient technologie et performance industrielle.</p>
+
+<main class="container">
+  <div class="card">
+    <h2>À propos de Laurent Garnier</h2>
+    <p><strong>Fondateur de HotProd</strong>, Laurent Garnier possède plus de 15 ans d’expérience dans l’industrialisation, la mécatronique et l’innovation technologique, en France, en Europe et en Asie.</p>
+
+    <ul style="margin-top:12px;">
+      <li>Direction industrielle et industrialisation produits high-tech</li>
+      <li>Expertise Lean, supply chain et qualité</li>
+      <li>Projets IoT, robotique et mécatronique</li>
+      <li>Expérience à l’international (France, Chine, Japon)</li>
+    </ul>
+
+    <h3 style="margin-top:20px;">Vision</h3>
+    <p>Offrir des solutions concrètes qui allient excellence industrielle et innovation technologique, pour aider les entreprises à croître durablement.</p>
+
+    <h3 style="margin-top:20px;">Langues</h3>
+    <p>Français, anglais courant — espagnol, chinois, allemand (conversationnel)</p>
+  </div>
 </main>
-<footer>
+
+<footer class="footer">
   <p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
