--- a/en/about.html
+++ b/en/about.html
@@ -1,21 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HotProd – Industrial Consulting</title>
-<link rel="stylesheet" href="../assets/style.css">
+  <meta charset="utf-8">
+  <title>About – HotProd</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="HotProd is led by Laurent Garnier, expert in industrialization and innovation with 15+ years of experience in Europe and Asia.">
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
 <header>
-  <h1>HotProd – Industrial Consulting</h1>
-  <nav><a href="index.html">Home</a> | <a href="services.html">Services</a> | <a href="about.html">About</a> | <a href="testimonials.html">Testimonials</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../fr/index.html">🇫🇷 Version française</a></div>
+  <div class="header-inner">
+    <div class="brand"><h1>HotProd</h1></div>
+    <nav class="desktop">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="about.html" style="text-decoration:underline;">About</a>
+      <a href="testimonials.html">Testimonials</a>
+      <a href="contact.html" class="cta-top">Contact</a>
+      <a href="../fr/about.html">FR</a>
+    </nav>
+  </div>
 </header>
-<main>
-<h2>About Laurent Garnier</h2><p>Over 15 years of experience in industrialization and technological innovation across Europe and Asia.</p><p>Industrial leadership and innovation experience at Lunii, Kickmaker, and SoftBank Robotics.</p><p><strong>Core Values:</strong> Innovation – Excellence – Collaboration</p><p><strong>Vision:</strong> Delivering solutions that combine technology and industrial performance.</p>
+
+<main class="container">
+  <div class="card">
+    <h2>About Laurent Garnier</h2>
+    <p><strong>Founder of HotProd</strong>, Laurent Garnier has over 15 years of experience in industrialization, mechatronics and innovation, across Europe and Asia.</p>
+
+    <ul style="margin-top:12px;">
+      <li>Industrialization and production leadership</li>
+      <li>Lean management and quality systems</li>
+      <li>IoT and robotics project experience</li>
+      <li>International coordination (France, China, Japan)</li>
+    </ul>
+
+    <h3 style="margin-top:20px;">Vision</h3>
+    <p>Delivering actionable solutions that combine technology and industrial excellence to drive sustainable business growth.</p>
+
+    <h3 style="margin-top:20px;">Languages</h3>
+    <p>Fluent in French and English – Conversational Spanish, Chinese, and German.</p>
+  </div>
 </main>
-<footer>
+
+<footer class="footer">
   <p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
