--- a/en/services.html
+++ b/en/services.html
@@ -1,21 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HotProd – Industrial Consulting</title>
-<link rel="stylesheet" href="../assets/style.css">
+  <meta charset="utf-8">
+  <title>Services – HotProd</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="HotProd services: product industrialization, technology innovation, project management, and team training.">
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
 <header>
-  <h1>HotProd – Industrial Consulting</h1>
-  <nav><a href="index.html">Home</a> | <a href="services.html">Services</a> | <a href="about.html">About</a> | <a href="testimonials.html">Testimonials</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../fr/index.html">🇫🇷 Version française</a></div>
+  <div class="header-inner">
+    <div class="brand"><h1>HotProd</h1></div>
+    <nav class="desktop">
+      <a href="index.html">Home</a>
+      <a href="services.html" style="text-decoration:underline;">Services</a>
+      <a href="about.html">About</a>
+      <a href="testimonials.html">Testimonials</a>
+      <a href="contact.html" class="cta-top">Contact</a>
+      <a href="../fr/services.html">FR</a>
+    </nav>
+  </div>
 </header>
-<main>
-<h2>Our Services</h2><h3>Product Industrialization</h3><p>From prototype to mass production. DFM optimization, quality control, and supplier process improvement.</p><h3>Technological Innovation</h3><p>Integration of IoT, robotics, and AI solutions to enhance performance.</p><h3>Project Management</h3><p>Agile and Lean methodologies for effective management of complex projects.</p><h3>Training and Development</h3><p>Workshops and coaching programs for technical teams and continuous improvement.</p>
+
+<main class="container">
+  <div class="card">
+    <h2>Our Expertise</h2>
+    <p>We support high-tech and industrial companies through every stage — from prototype to production.</p>
+
+    <div class="features">
+      <div class="feature"><h3>Product Industrialization</h3><p>From prototype to mass production — DFM, validation, supplier process optimization.</p></div>
+      <div class="feature"><h3>Technological Innovation</h3><p>Strategic technology recommendations, IoT and robotics integration, product architecture.</p></div>
+      <div class="feature"><h3>Project Management</h3><p>Agile & Lean management, global coordination, and industrial risk reduction.</p></div>
+      <div class="feature"><h3>Training & Coaching</h3><p>Workshops, technical training and continuous improvement programs for your teams.</p></div>
+    </div>
+  </div>
 </main>
-<footer>
+
+<footer class="footer">
   <p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
