--- a/fr/testimonials.html
+++ b/fr/testimonials.html
@@ -1,21 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HotProd – Conseil en industrialisation</title>
-<link rel="stylesheet" href="../assets/style.css">
+  <meta charset="utf-8">
+  <title>Témoignages – HotProd</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Découvrez les témoignages clients sur les missions de transformation industrielle menées par HotProd.">
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
 <header>
-  <h1>HotProd – Conseil en industrialisation</h1>
-  <nav><a href="index.html">Accueil</a> | <a href="services.html">Services</a> | <a href="about.html">À propos</a> | <a href="testimonials.html">Témoignages</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../en/index.html">🇬🇧 English version</a></div>
+  <div class="header-inner">
+    <div class="brand"><h1>HotProd</h1></div>
+    <nav class="desktop">
+      <a href="index.html">Accueil</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">À propos</a>
+      <a href="testimonials.html" style="text-decoration:underline;">Témoignages</a>
+      <a href="contact.html" class="cta-top">Contact</a>
+      <a href="../en/testimonials.html">EN</a>
+    </nav>
+  </div>
 </header>
-<main>
-<h2>Témoignages</h2><blockquote>“Laurent a su structurer notre production et optimiser nos process en un temps record.”</blockquote><p>— Directeur industriel, startup IoT</p><blockquote>“Une expertise rare qui combine innovation et rigueur industrielle.”</blockquote><p>— Responsable innovation, PME robotique</p>
+
+<main class="container">
+  <div class="card">
+    <h2>Témoignages de nos clients</h2>
+    <blockquote>
+      « Laurent a structuré notre production IoT et réduit notre time-to-market de 30%. »
+    </blockquote>
+    <p class="small-muted">— Directeur industriel, société de robotique</p>
+
+    <blockquote>
+      « Un accompagnement clair, pragmatique et efficace. La qualité des process s’est nettement améliorée. »
+    </blockquote>
+    <p class="small-muted">— COO, start-up électronique</p>
+
+    <blockquote>
+      « Excellente capacité à fédérer des équipes internationales et à instaurer une culture d’amélioration continue. »
+    </blockquote>
+    <p class="small-muted">— Responsable production, entreprise IoT</p>
+  </div>
 </main>
-<footer>
+
+<footer class="footer">
   <p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
